# domain-router

./: .gitignore  .pnp.cjs  BUILD.md  HUONG_DAN_BUILD_RUN.md  INSTALL.md  LETS_ENCRYPT.md  PERMISSIONS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REFACTORING_NOTES.md  RUN_GUIDE.md  SSL_SETUP.md  install.sh  package.json
releases/: Domain Router_1.0.0_amd64.deb
scripts/: build-and-setup.sh  post-install.sh
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  privilege.rs
src-tauri/src/acme/: mod.rs
src-tauri/src/hosts/: mod.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/routes/: mod.rs
src-tauri/src/ssl/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: AddDomainRouteDialog.tsx  AddPortMappingDialog.tsx  AddRouteDialog.tsx  HostsList.tsx  QuickPortMappingDialog.tsx  RouteList.tsx
