[package]
name = "domain-router"
version = "1.0.0"
description = "Ubuntu domain routing and port mapping tool with Traefik"
authors = ["Domain Router Team"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "domain_router_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server and reverse proxy
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# TLS support
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rustls-acme = { version = "0.11", features = ["axum"] }

# File and system operations
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# SSL/TLS certificate generation
rcgen = "0.13"

# Logging
log = "0.4"
env_logger = "0.11"

# System operations
libc = "0.2"
parking_lot = "0.12"
lazy_static = "1.4"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

